Added module for Reasons, and relative tests. Added utils for string and log formatting. Now using provided Lombok.
