# src/main/java/dev/ignitr/ignitrbackend/reason/dto/ReasonDTO.java
@@ -1,0 +1,9 @@
+package dev.ignitr.ignitrbackend.reason.dto;
+
+public record ReasonDTO (
+        String id,
+        String content,
+        String type,
+        String createdAt,
+        String updatedAt
+){}
