# src/main/java/dev/ignitr/ignitrbackend/spark/model/Spark.java
@@ -1,5 +1,6 @@
 package dev.ignitr.ignitrbackend.spark.model;
 
+import dev.ignitr.ignitrbackend.reason.model.Reason;
 import lombok.Getter;
 import lombok.Setter;
 import org.springframework.data.annotation.Id;
@@ -7,6 +8,8 @@ import org.springframework.data.mongodb.core.index.Indexed;
 import org.springframework.data.mongodb.core.mapping.Document;
 
 import java.time.Instant;
+import java.util.ArrayList;
+import java.util.List;
 
 @Getter
 @Setter
@@ -23,16 +26,19 @@ public class Spark {
 
     private String parentId;
 
+    private List<Reason> reasons = new ArrayList<>();
+
     private Instant createdAt;
 
     private Instant updatedAt;
 
     public Spark() {}
 
-    public Spark(String id, String title, String description, String parentId, Instant createdAt, Instant updatedAt) {
+    public Spark(String id, String title, String description, String parentId, List<Reason> reasons, Instant createdAt, Instant updatedAt) {
         this.id = id;
         this.title = title;
         this.description = description;
+        this.reasons = reasons;
         this.parentId = parentId;
         this.createdAt = createdAt;
         this.updatedAt = updatedAt;
